# fin-trade-alpaca

./: .env.example  .gitignore  README.md  RUNNER_COMMANDS.MD  STOP_LOSS_IMPLEMENTATION.md  automation.example.yaml  automation.yaml  clone_live_to_paper.py  config.py  env.live  env.paper  main.py  pyproject.toml  requirements.txt  run_automation.py  strategy.json  test_build_dataset.py  test_case_sensitivity.py  test_column_matching.py  test_download.py  test_download_direct_call.py  test_download_function.py  test_full_download.py  test_yfinance_import.py
configs/: automation.yaml  equity_screener.json  paper_clone_strategy.json  prediction_elasticnet.json  prediction_ridge.json  prediction_screener.json  strategy.example.json  strategy.json
console/: README.md  __init__.py  console.py
database/: README.md  __init__.py  migrate_strategy_columns.py  protection.py  schema.py  strategy_metadata.py  sync.py  test_strategy_metadata.py
docs/: FEATURE_ENGINEERING.md  PREDICTION_SCREENER.md  README_SCREENER.md  STRATEGY_ATTRIBUTION.md
functional_tests/: alpaca_env_test.py  test_yf.py
fundamentals/: __init__.py  client.py  cortex.py  sec_filings.py
reports/: clone report - 20260601-0000.txt  clone report - 20260601-2236.txt  stop_loss_take_profit_diagnostic.json
sandbox/: dedup_by_correlation.py  inspect_screener_module.py  predict_short_term.py  predict_short_term_cv.py  rank_candidates.py  yfinance_equity_screener.py  yfinance_growth_screener.py  yfinance_screener_results.csv  yfinance_tour.py
scripts/: run_automation.py
signals/: __init__.py  screener.py  technical.py
tests/: __init__.py  test_optimize.py  test_optimize_and_buy_ranking.py  test_predict_screener_config.py  test_predict_short_term.py  test_prediction_chart.py  test_rank_candidates.py  test_screener.py  test_technical.py  test_trader.py  test_yfinance_import_shim.py
tools/: __init__.py  account_summary.py  add_position_protections.py  backtest_predictions.py  cancel_and_run_clone.py  cancel_observed_orders.py  check_history.py  compare_predictions.py  debug_predict.py  diagnose_features.py  diagnose_model_metrics.py  diagnose_stop_loss_take_profit.py  enrich_assets.py  enrich_csv.py  export_us_equity_sector_industry_table.py  force_sell_paper_positions.py  import_screener_test.py  inspect_client_methods.py  inspect_orders.py  inspect_paper_state.py  inspect_position_fields.py  list_orders_verbose.py  poll_for_fills_and_report.py  (+14 more)
(+62 files in other folders)
