[project]
name = "fin-trade-alpaca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"alpaca-py",
	"numpy",
	"pandas",
	"python-dotenv",
	"pyyaml",
	"requests",
	"yfinance"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
# CLI entry points for screener utilities
yfinance-screener = "yfinance.screener.yfinance_growth_screener:main"
yfinance-rank = "yfinance.screener.rank_candidates:main"
yfinance-dedup = "yfinance.screener.dedup_by_correlation:main"
predict-screener = "fin_trade_alpaca.cli.predict_screener_cli:main"
# Canonical orchestration entry points
orchestration-optimize = "orchestration.commands.optimize_and_buy:main"
orchestration-predict = "orchestration.commands.predict_screener:main"
orchestration-clone = "orchestration.commands.clone_live_to_paper:main"
orchestration-liquidate = "orchestration.commands.liquidate_paper_account:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["fin_trade_alpaca*", "yfinance*", "orchestration*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
