[project]
name = "fin-trade-alpaca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"alpaca-py",
	"numpy",
	"pandas",
	"python-dotenv",
	"pyyaml",
	"requests",
	"yfinance"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
